# khis-toolkit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py  map.py
docs/: API.md  DEPLOY.md  KHIS_OUTREACH_EMAIL.md  LAUNCH_POSTS.md  PITCH.md  PRELAUNCH_CHECKLIST.md  PUBLISH.md  ROADMAP.md
examples/: 01_quick_start.ipynb  02_kenya_counties.ipynb  03_data_quality.ipynb  04_forecasting.ipynb
khis/: __init__.py  cleaner.py  connector.py  counties.py  demo.py  forecast.py  mental_health.py  pilot.py  quality.py
khis/data/: ATTRIBUTION.md  kenya_counties.geojson
src/: __init__.py  api.py
tests/: __init__.py  test_api.py  test_cleaner.py  test_connector.py  test_counties.py  test_dashboard.py  test_demo.py  test_forecast.py  test_mental_health.py  test_public_api.py  test_quality.py
