[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khis-toolkit"
version = "0.1.0"
description = "Python analytics toolkit for Kenya DHIS2/KHIS health data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "John Andrew", email = "andyombogo@gmail.com" }
]
keywords = ["Kenya", "DHIS2", "KHIS", "health", "analytics", "epidemiology", "public health"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "prophet>=1.1.4",
  "scikit-learn>=1.3.0",
  "xgboost>=1.7.0",
  "plotly>=5.15.0",
  "folium>=0.14.0",
  "flask>=3.0.0",
  "gunicorn>=21.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "shap>=0.42.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.65.0",
  "joblib>=1.3.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "responses>=0.23.0",
  "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/andyombogo/khis-toolkit"
Repository = "https://github.com/andyombogo/khis-toolkit"
Issues = "https://github.com/andyombogo/khis-toolkit/issues"

[tool.setuptools.packages.find]
include = ["khis*", "dashboard*", "src*"]
